--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "bus.baegot.ykh.com.baegotbus"
+        applicationId "com.ykh.bagotbus"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
@@ -21,9 +21,18 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile (name: 'naver-map-api-2.1.3', ext: 'aar')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
 }
+
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
+
